feat: EndPoints Comparator more updated enpoints
Comparison of lists and Products and repair of udpade and findAll points